src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>ACPID_Shutdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACPID Shutdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Retired_Notes__c</fullName>
        <label>Additional Retired Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Comment__c</fullName>
        <label>Asset Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadband__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadband</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClinicExamRoom__c</fullName>
        <label>Clinic Exam Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_of_Equipment__c</fullName>
        <label>Cost of Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DVD_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DVD-Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damaged_Awaiting_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Damaged (Awaiting Repair)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Power_Supply_Replaced__c</fullName>
        <label>Date Power Supply Replaced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Retired__c</fullName>
        <label>Date Retired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentRepairLog__c</fullName>
        <label>EquipmentRepairLog</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost_Estimate__c</fullName>
        <label>Equipment Cost - Estimate*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fedex_Label__c</fullName>
        <label>Fedex Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fedex_Shipment_Status__c</fullName>
        <label>Fedex Shipment Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Type__c</fullName>
        <label>HD Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <inlineHelpText>ID of an equipment piece is as follows: DHNNUMBER-X-SCREENSIZE-Y, DHN Number is the DHN ID #, X is a unique PC ID in that clinic, SCREENSIZE is numeric screen size of display assoc. w/the equipment, &amp; Y identifies  a particular display connected to PC.</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Status__c</fullName>
        <label>Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InstalledDate__c</fullName>
        <label>Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Into_Damaged_Awaiting_Repair__c</fullName>
        <label>Into Damaged(Awaiting Repair)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Number__c</fullName>
        <label>Inventory Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_MAC_Address__c</fullName>
        <label>LAN MAC Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landscape_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landscape Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped to Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged - At Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped from Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago Liquidators Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContextMedia Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cradlepoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ErgoMart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Startech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CableWholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Practice_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <label>Member Practice City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Stage__c</fullName>
        <formula>Text(Account.Stage__c)</formula>
        <label>Member Practice Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_State__c</fullName>
        <formula>Account.BillingState</formula>
        <label>Member Practice State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Zip__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <label>Member Practice Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Make__c</controllingField>
            <picklistValues>
                <fullName>20LS7DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22LD350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22LT560C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22LV255C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250U - Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LC7DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LD350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LD352C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LG30DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LH20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26LT560C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LC7DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LD350C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LD452B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LD452C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LG30DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LH20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LN541C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LT560E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32LV255C - LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37LD450C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37LD452B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37LD452C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37LT560E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LD450C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LD452B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LD452C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LG30DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LN541C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42LT560E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MountType__c</fullName>
        <label>Mount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Floor Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wall Ball Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wall Tethered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>7.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win 7 Pro - OEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orig_Date_into_Service__c</fullName>
        <label>Orig Date into Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Pwr_Supply_Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orig Pwr Supply Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutletLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the given Asset was installed with an outlet lock.</description>
        <label>Outlet Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Player_location_at_site__c</fullName>
        <inlineHelpText>This field is only required for clinics with more than 1 system</inlineHelpText>
        <label>Player location at site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <formula>Product2.Common__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_From_Inventory__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity From Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Equipment_Retired__c</fullName>
        <label>Reason Equipment Retired</label>
        <picklist>
            <picklistValues>
                <fullName>Lost/Stolen at Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged During Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Malfunction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged at Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Recycled - PCRR - March 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold to CM Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Recycled - PCRR - Nov 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment recycled - May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Recycled - PCRR June 2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Retired__c</fullName>
        <label>Reason Retired</label>
        <picklist>
            <picklistValues>
                <fullName>Lost/Stolen at Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged During Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Malfunction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See Description)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged at Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Recycled - PCRR - March 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold to CM Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Recycled - PCRR - Nov 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment recycled - May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Recycled - PCRR June 2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recovery_Value__c</fullName>
        <label>Recovery Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RelatedWorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Order</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resume_by_Alarm_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resume by Alarm Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired_Date__c</fullName>
        <label>Retired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIM__c</fullName>
        <label>SIM #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSD_Corruption_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSD Corruption Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scanner_Value__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scanner Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Order</label>
        <referenceTo>Shipping_Order__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size_of_Display__c</fullName>
        <label>Size of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <picklist>
            <picklistValues>
                <fullName>Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheum No Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship - GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship - Neuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship - PCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship - Rheum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StolenMissingOrDisposedOf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stolen, Missing, or Disposed Of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_Antenna_Sprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Super Antenna (Sprint)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB Sprint Modem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cradle Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB Verizon Modem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon USB Modem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi Hotspot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unnamed_1__c</fullName>
        <label>Unnamed 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>TTL Volume</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wifi_MAC_Address__c</fullName>
        <label>Wifi MAC Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wifi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wifi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Players__c</fullName>
        <label># of Players</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Model__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>sprint,verizon,mobile</value>
        </filters>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>